# legacy

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/app/: application.hpp
src/chat/: message.cpp  message.hpp  message_element.hpp
src/crypto/: encryption.cpp  encryption.hpp
src/graphics/: image_loader.cpp  image_loader.hpp  renderer.cpp  renderer.hpp  text_renderer.cpp  text_renderer.hpp
src/media/: gif_player.cpp  gif_player.hpp  image_cache.cpp  image_cache.hpp
src/network/: client.cpp  client.hpp  packet.hpp  serializer.cpp
src/platform/: win32_window.cpp  win32_window.hpp
src/storage/: database.cpp  database.hpp
src/ui/: input_box.cpp  input_box.hpp  message_view.cpp  message_view.hpp  toolbar.cpp  toolbar.hpp
src/util/: logger.hpp  thread_pool.hpp  utf_conversion.hpp
